tolk-tester/tests/invalid-syntax/err-3817.tolk

/**
@path_mapping @me=/1
@path_mapping @me=/2
@compilation_should_fail
@stderr duplicated path mapping @me
 */
